--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bi-conversacional",
+  "name": "mba-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,16 +13,18 @@
     "chart.js": "^4.4.9",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
     "vue-good-table-next": "^0.2.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.4",
     "@vitejs/plugin-vue": "^5.2.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.4",
+    "tailwindcss": "^3.3.0",
     "vite": "^6.3.1"
   }
 }
